--- a/style.css
+++ b/style.css
@@ -19,3 +19,42 @@ body{
     width: 350px;
     align-items: center;
 }
+.container h1{
+    font-family: Broadway;
+    box-shadow: 2px 2px 4px 3px rgba(213, 21, 59, 0.213);
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    font-size: 2.5rem;
+    color: rgba(220, 20, 57, 0.819);
+    font-weight: bolder;
+  
+}
+#taskInput{
+    width: 93%;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 7px;
+    margin-bottom: 15px;
+    font-size: 16px;
+    font-weight: bold;
+
+    outline: none;
+    transition: border 0.2s;
+}
+#taskInput:focus{
+    border-color: crimson;
+}
+button{
+    padding: 10px 20px;
+    background-color: rgba(220, 20, 57, 0.819);
+    border-radius: 10px;
+    color: white;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+button:hover{
+    background-color: crimson;
+    box-shadow: 1px 1px 2px 2px black;
+}
