--- a/style.css
+++ b/style.css
@@ -58,3 +58,47 @@ button:hover{
     background-color: crimson;
     box-shadow: 1px 1px 2px 2px black;
 }
+ul{
+    list-style: none;
+    padding: 0;
+    max-height: 200px;
+    /* vertical scroling  */
+    overflow-y: auto;
+    margin-bottom: 10px;
+}
+li{
+    background: color #f9f9f9;;
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 0.2s;
+}
+li:hover{
+    background-color: #e9e9e9;
+}
+
+
+/* completed tasks */
+.complete{
+    text-decoration: line-through;
+    color: gray;
+}
+
+/* Remove button styling  */
+.remove-btn{
+    background-color: rgba(220, 20, 57, 0.819);
+    border-radius: 10px;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 12px;
+}
+.remove-btn:hover{
+    background-color: crimson;
+    box-shadow: 1px 1px 2px 2px black;   
+}
