update the background image

--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0;
-    background: url(./images/4.jpg);
+    background: linear-gradient(rgba(0,0,0,0.12),rgba(0,0,0,0.325)),url(./images/img-1.webp);
     background-size: cover;
-    /* background-color: rgba(0, 208, 255, 0.297); */
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
